Working on structure

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -9,11 +9,12 @@
 \usepackage{float}
 \usepackage{multicol}
 \usepackage{textcomp}
+\usepackage{abstract}
+\renewcommand{\abstractnamefont}{\normalfont\Huge\bfseries}
 \graphicspath{{img/}}
 
 
 \begin{document}
-
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
@@ -63,10 +64,26 @@
 
 \end{titlepage}
 
+\begin{abstract}
+
+\end{abstract}
+\newpage
+
 \tableofcontents
 \newpage
 
+\section{Smile}
 
+\subsection{The company}
+\subsection{Organizational structure}
 
+\section{Buildroot}
+
+\section{LLVM}
+\subsection{The project}
+\subsection{Internal aspects}
+\subsection{Clang}
+
+\section{Mesa 3D}
 
 \end{document}
