Working on structure

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,6 +1,5 @@
 \documentclass[12pt,a4paper,oneside]{article}
 \usepackage[a4paper,left=3cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
-\usepackage[a4paper,left=3cm,right=2cm,top=2.5cm,bottom=2.5cm]{geometry}
 \usepackage{graphicx}
 \usepackage{verbatim}
 \usepackage{listings}
@@ -10,7 +9,7 @@
 \usepackage{multicol}
 \usepackage{textcomp}
 \usepackage{abstract}
-\renewcommand{\abstractnamefont}{\normalfont\Huge\bfseries}
+\renewcommand{\abstractnamefont}{\normalfont\Large\bfseries}
 \graphicspath{{img/}}
 
 
@@ -24,27 +23,33 @@
 
 	\center % Centre everything on the page
 
-	\textsc{\LARGE ESIEE Paris}\\[1.5cm] % Main heading such as the name of your university/college
-
-	\textsc{\Large International Master of Computer Science}\\[0.5cm] % Major heading such as course name
-
-	\textsc{\Large E5 Internship Report}\\[0.5cm] % Minor heading such as course title
-
 	\begin{figure}[H]
 	\centering
-	  \includegraphics[scale=2]{img/logo_esiee.png}
+	  \includegraphics[scale=1.8]{img/logo_esiee.png}
 	  \label{fig:logo_esiee}
 	\end{figure}
 
-	\textsc{\large LLVM/Clang integration to Buildroot}\\[1cm]
+	\textsc{\Large International Master of Computer Science}\\[0.5cm] % Major heading such as course name
 
-	\textsc{\large Company: Smile}\\[1cm]
+	\textsc{\Large E5 Internship Report}\\[0.4cm] % Minor heading such as course title
+
+	\vspace*{30px}
+
+	\begin{figure}[H]
+	\centering
+	  \includegraphics[scale=0.4]{img/smile.png}
+	  \label{fig:logo_esiee}
+	\end{figure}
+
+	\textsc{\Large LLVM/Clang integration to Buildroot}\\[1cm]
+
+	\textsc{\large Valent\'{i}n Korenblit}\\[1cm]
 
 	\begin{minipage}{0.4\textwidth}
 		\begin{flushleft}
 			\large
-			\textit{Author}\\
-			Valent\'{i}n Korenblit % Your name
+			\textit{Tutor}\\
+			Romain Naour % Your name
 		\end{flushleft}
 	\end{minipage}
 	~
