--- a/tex/main.tex
+++ b/tex/main.tex
@@ -89,6 +89,11 @@
 \subsection{Internal aspects}
 \subsection{Clang}
 
-\section{Mesa 3D}
+\section{Linux graphics stack}
+\subsection{The DRI/DRM infrastructure}
+\subsection{OpenGL}
+\subsection{Mesa 3D}
+
+\section{OpenCL}
 
 \end{document}
